<resources>
    <string name="app_name">Calculator</string>


    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>


    <string name="parenthesesOpen">(</string>
    <string name="parenthesesClose">)</string>
    <string name="divide">÷</string>
    <string name="percent">%</string>
    <string name="multiply">×</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="decimal">.</string>
    <string name="equals">=</string>


    <string name="inverse">INV</string>
    <string name="degree">DEG</string>
    <string name="radian">RAD</string>
    <string name="trigSin">sin</string>
    <string name="trigCos">cos</string>
    <string name="trigTan">tan</string>
    <string name="trigArcSin">sin<sup><small>-1</small></sup></string>
    <string name="trigArcCos">cos<sup><small>-1</small></sup></string>
    <string name="trigArcTan">tan<sup><small>-1</small></sup></string>
    <string name="naturalLog">ln</string>
    <string name="exponential">exp</string>
    <string name="log">log</string>
    <string name="factorial">!</string>
    <string name="squareRoot">√</string>
    <string name="pie">π</string>
    <string name="e">e</string>
    <string name="xSquare">x<sup><small>2</small></sup></string>
    <string name="xPower">x<sup><small>y</small></sup></string>

</resources>